[gd_scene load_steps=2 format=3 uid="uid://options_menu_001"]

[ext_resource type="Script" path="res://scripts/ui/options_menu.gd" id="1_script"]

[node name="OptionsMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.02, 0.02, 0.06, 0.85)

[node name="Center" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="Center"]
layout_mode = 2
custom_minimum_size = Vector2(420, 0)

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="VolumeRow" type="HBoxContainer" parent="Center/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="VolumeLabel" type="Label" parent="Center/Panel/VBox/VolumeRow"]
layout_mode = 2
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="Center/Panel/VBox/VolumeRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 1.0
value = 100.0

[node name="VolumePercent" type="Label" parent="Center/Panel/VBox/VolumeRow"]
layout_mode = 2
custom_minimum_size = Vector2(48, 0)
text = "100%"

[node name="BackBtn" type="Button" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Back to Main Menu"

[node name="QuitBtn" type="Button" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Quit"

[node name="CloseBtn" type="Button" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Close"
